# systemic-tau-formal

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  STATUS.md  postBuild  requirements.txt
docs/: ACCESS_LAYERS.md  CHALLENGES.md  CROSS_DOMAIN.md  EPISTEMIC_LABELS.md  EXPERIMENTAL_PROTOCOL.md  FALSIFIABLE_PREDICTIONS.md  FEIGENBAUM_AXIOMS.md  FEIGENBAUM_STATUS.md  FORMAL_OBLIGATIONS.md  ISSUE_BOARD.md  MATHLIB.md  ONTOLOGY_BRIDGE.md  TAU_CH_DELTA.md  WORKSHOP_STRESS_TEST_2026.md  ZENODO.md
fixtures/: golden_constants.json
lean/: SystemicTau.lean  lake-manifest.json  lakefile.lean
notebooks/: 01_synthetic_chaos.ipynb  01_synthetic_chaos.py  02_aedes_puerto_rico.ipynb  02_aedes_puerto_rico.py  03_falsifiability_test.ipynb  03_falsifiability_test.py  04_p3_noise_robustness.py  05_first_return_poincare.py  06_cross_domain_c3.py  07_aedes_field_report.py  08_aedes_p3_field.py  09_aedes_p4_field.py  10_aedes_empirical_board.py  README.md
python/: README.md  pyproject.toml
python/core/: __init__.py  aedes_io.py  constants.py  empirical_board.py  first_return.py  golden.py  io_data.py  p1_endpoints.py  p4_sync.py  recd.py  regimes.py  report.py  synthetic.py  tau.py
python/scripts/: export_fixtures.py  export_golden.py  import_aedes_thesis.py
python/tests/: test_aedes_raw.py  test_cross_domain.py  test_empirical_board.py  test_first_return.py  test_fixtures_pipeline.py  test_lean_golden.py  test_math_core.py  test_p1_endpoints.py  test_p3_field_aedes.py  test_p3_noise.py  test_p4_anti_sync.py  test_p4_field_aedes.py  test_thresholds_delta.py
(+47 files in other folders)
